# go1_dataset_recorder

./: .gitignore  .gitmodules  README.md  docker-compose.yml
Docker/: docker-compose.yml  startup.sh
Docker/bpearl/: README.txt  bpearl-jetson.Dockerfile
Docker/emlid/: emlid-jetson.Dockerfile
Docker/foxglove/: foxglove-jetson.Dockerfile
Docker/go1/: go1-jetson.Dockerfile
Docker/hesai/: hesai-jetson.Dockerfile
Docker/realsense/: realsense-jetson-build.Dockerfile  realsense-jetson.Dockerfile
Docker/recorder/: recorder-jetson.Dockerfile
Docker/rm3100/: rm3100-jetson.Dockerfile
Docker/xsens/: xsens-jetson.Dockerfile
bpearl/: bpearl-jetson-full.Dockerfile  bpearl-jetson.Dockerfile
emlid/: emlid-jetson-full.Dockerfile  emlid-jetson.Dockerfile
go1/: go1-jetson.Dockerfile
realsense/: realsense-jetson-full.Dockerfile  realsense-jetson.Dockerfile
recorder/: recorder-jetson.Dockerfile
ros2_ws/go1_description/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/go1_description/launch/: publish_urdf.launch.py
ros2_ws/go1_description/meshes/: RTK-Antenna-Support-Base.dae  Suporte_Lidar_V006.dae
ros2_ws/go1_description/urdf/: go1.urdf
ros2_ws/unitree_ros/: README.md
sensor_configs/bpearl/: config.yaml  start.py
sensor_configs/emlid/: nmea_serial_driver.py  nmea_serial_driver.yaml
shared_folder/: .names_2  bpearl-launch.sh  emlid-launch.sh  foxglove-launch.sh  go1-launch.sh  realsense-launch.sh  recorder-launch.sh  rm3100-launch.sh  xsens-launch.sh
urdf/: go1.urdf
xsens/: xsens-jetson-full.Dockerfile  xsens-jetson.Dockerfile
(+10 files in other folders)
